@startuml
title State Pattern — Hero States

interface HeroState {
  +getName(): String
  +modifyOutgoingDamage(basePower: int): int
  +modifyIncomingDamage(rawDamage: int): int
  +onTurnStart(hero: Hero): void
  +onTurnEnd(hero: Hero): void
  +canAct(): boolean
}

class Hero {
  -name: String
  -hp: int
  -maxHp: int
  -attackPower: int
  -defense: int
  -state: HeroState

  +Hero(name: String, hp: int, attackPower: int, defense: int)
  +Hero(name: String, hp: int, attackPower: int, defense: int, state: HeroState)
  +getName(): String
  +getHp(): int
  +getMaxHp(): int
  +getStateName(): String
  +setState(newState: HeroState): void
  +attack(monster: Monster): void
  +receiveDamage(rawDamage: int): void
  +onTurnStart(): void
  +onTurnEnd(): void
  +canAct(): boolean
}

class NormalState
class PoisonedState {
  -turnsLeft: int
}
class StunnedState {
  -turnsLeft: int
}
class BerserkState

HeroState <|.. NormalState
HeroState <|.. PoisonedState
HeroState <|.. StunnedState
HeroState <|.. BerserkState

Hero --> HeroState : has current state
PoisonedState --> NormalState : wears off
StunnedState --> NormalState : stun ends
NormalState --> BerserkState : low HP

@enduml